--- a/components/backup.yaml
+++ b/components/backup.yaml
@@ -587,19 +587,6 @@ Resources:
         def root_id():
             return root()['Id']
 
-
-        def exception_handling(function):
-            def catch(event, context):
-                try:
-                    function(event, context)
-                except Exception as e:
-                    print(e)
-                    print(event)
-                    cfnresponse.send(event, context, cfnresponse.FAILED, {})
-
-            return catch
-
-
         def with_retry(function, **kwargs):
             for i in [0, 3, 9, 15, 30]:
                 # Random sleep to not run into concurrency problems when adding or attaching multiple TAG_POLICYs
@@ -616,7 +603,6 @@ Resources:
             raise Exception
 
 
-        @exception_handling
         def handler(event, context):
             RequestType = event["RequestType"]
             Properties = event["ResourceProperties"]
@@ -637,35 +623,35 @@ Resources:
             )
 
             policy_id = PhysicalResourceId
-            paginator = o.get_paginator('list_policies')
-            policies = [policy['Id'] for page in paginator.paginate(Filter=TAG_POLICY) for policy in
-                        page['Policies']
-                        if policy['Name'] == LogicalResourceId]
-            if policies:
-                policy_id = policies[0]
-            if RequestType == CREATE:
-                print('Creating Policy: {}'.format(LogicalResourceId))
-                response = with_retry(o.create_policy,
-                                      **parameters, Type=TAG_POLICY
-                                      )
-                policy_id = response["Policy"]["PolicySummary"]["Id"]
-                if Attach:
-                    with_retry(o.attach_policy, PolicyId=policy_id, TargetId=root_id())
-            elif RequestType == UPDATE:
-                print('Updating Policy: {}'.format(LogicalResourceId))
-                with_retry(o.update_policy, PolicyId=policy_id, **parameters)
-            elif RequestType == DELETE:
-                print('Deleting Policy: {}'.format(LogicalResourceId))
-                # Same as above
-                if re.match('p-[0-9a-z]+', policy_id):
-                    if policy_attached(policy_id):
-                        with_retry(o.detach_policy, PolicyId=policy_id, TargetId=root_id())
-                    with_retry(o.delete_policy, PolicyId=policy_id)
+
+            try:
+                if RequestType == CREATE:
+                    print('Creating Policy: {}'.format(LogicalResourceId))
+                    response = with_retry(o.create_policy,
+                                          **parameters, Type=TAG_POLICY
+                                          )
+                    policy_id = response["Policy"]["PolicySummary"]["Id"]
+                    if Attach:
+                        with_retry(o.attach_policy, PolicyId=policy_id, TargetId=root_id())
+                elif RequestType == UPDATE:
+                    print('Updating Policy: {}'.format(LogicalResourceId))
+                    with_retry(o.update_policy, PolicyId=policy_id, **parameters)
+                elif RequestType == DELETE:
+                    print('Deleting Policy: {}'.format(LogicalResourceId))
+                    # Same as above
+                    if re.match('p-[0-9a-z]+', policy_id):
+                        if policy_attached(policy_id):
+                            with_retry(o.detach_policy, PolicyId=policy_id, TargetId=root_id())
+                        with_retry(o.delete_policy, PolicyId=policy_id)
+                    else:
+                        print('{} is no valid PolicyId'.format(policy_id))
                 else:
-                    print('{} is no valid PolicyId'.format(policy_id))
-            else:
+                    cfnresponse.send(event, context, cfnresponse.FAILED, {}, policy_id)
+                cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, policy_id)
+            except Exception as e:
+                print(e)
+                print(event)
                 cfnresponse.send(event, context, cfnresponse.FAILED, {}, policy_id)
-            cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, policy_id)
 
 
         def policy_attached(policy_id):
