chore: update custom resource handler

--- a/components/backup.yaml
+++ b/components/backup.yaml
@@ -646,7 +646,8 @@ Resources:
                     else:
                         print('{} is no valid PolicyId'.format(policy_id))
                 else:
-                    cfnresponse.send(event, context, cfnresponse.FAILED, {}, policy_id)
+                    raise Exception('Unexpected RequestType: {}'.format(RequestType))
+
                 cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, policy_id)
             except Exception as e:
                 print(e)
