fix: github action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,5 +21,4 @@ jobs:
           @semantic-release/git
           @semantic-release/changelog
       env:
-        GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
