--- a/components/superwerker.yaml
+++ b/components/superwerker.yaml
@@ -36,6 +36,12 @@ Parameters:
       - false
     Default: true
     Type: String
+  IncludeBackup:
+    AllowedValues:
+      - true
+      - false
+    Default: true
+    Type: String
   IncludeServiceControlPolicies:
     AllowedValues:
       - true
@@ -61,6 +67,9 @@ Conditions:
   IncludeSecurityHub: !And
     - !Condition IncludeControlTower
     - !Equals [ !Ref IncludeSecurityHub, true ]
+  IncludeBackup: !And
+    - !Condition IncludeControlTower
+    - !Equals [ !Ref IncludeBackup, true ]
   IncludeServiceControlPolicies: !And
     - !Condition IncludeControlTower
     - !Equals [ !Ref IncludeServiceControlPolicies, true ]
@@ -184,12 +193,22 @@ Resources:
     Properties:
       TemplateURL: !Sub ${TemplateUrlPrefix}/components/security-hub.yaml
 
+  Backup:
+    Condition: IncludeBackup
+    Type: AWS::CloudFormation::Stack
+    DependsOn: ControlTower
+    Properties:
+      TemplateURL: !Sub ${TemplateUrlPrefix}/components/backup.yaml
+
   ServiceControlPolicies:
     Condition: IncludeServiceControlPolicies
     Type: AWS::CloudFormation::Stack
     DependsOn: ControlTower
     Properties:
       TemplateURL: !Sub ${TemplateUrlPrefix}/components/service-control-policies.yaml
+      Parameters:
+        IncludeSecurityHub: !Ref IncludeSecurityHub
+        IncludeBackup: !Ref IncludeBackup
 
 Outputs:
 
