--- a/components/readme.yaml
+++ b/components/readme.yaml
@@ -67,14 +67,14 @@ Resources:
 
           if rootmail_ready_alarm_state == 'OK':
             dns_delegation_text = """
-        ### ✅ Setup DNS Delegation to your chosen domain `{domain}`
+        ## ✅ Setup DNS Delegation to your chosen domain `{domain}`
         """.format(
           domain=os.environ['SUPERWERKER_DOMAIN'],
         )
           else:
             if '/superwerker/domain_name_servers' in superwerker_config:
               dns_delegation_text = """
-        ### ❌ Setup DNS Delegation to your chosen domain `{domain}`
+        ## ❌ Setup DNS Delegation to your chosen domain `{domain}`
 
         Please create the following NS records for `{domain}`:
         - `{ns[0]}`
@@ -91,8 +91,6 @@ Resources:
           markdown = """
 
           # Welcome to superwerker
-
-          ## Setup
 
           {dns_delegation}
 
