chore: update github action for branch deployment

--- a/.github/workflows/deployment.branch.yml
+++ b/.github/workflows/deployment.branch.yml
@@ -1,12 +1,12 @@
 
-name: Release
+name: Branch Deployments
 
 on:
   push:
-    branches: ['*', '!main']
+    branches: ['*']
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
