--- a/.github/workflows/deploy-branch.yml
+++ b/.github/workflows/deploy-branch.yml
@@ -10,8 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
+
     - name: Checkout
       uses: actions/checkout@v2
 
     - name: Example
-      run: echo "ref is ${{ github.ref }}"
+      run: echo "ref is ${{ steps.extract_branch.outputs.branch }}"
