--- a/components/superwerker.yaml
+++ b/components/superwerker.yaml
@@ -5,11 +5,11 @@ Parameters:
   AuditAWSAccountEmail:
     Type: String
     Default: ""
-    Description: Mail Address used to create an AWS Account for Audit purposes
+    Description: Mail Address used to create an AWS Account for Audit purposes. (Leave empty to skip)
   LogArchiveAWSAccountEmail:
     Type: String
     Default: ""
-    Description: Mail Address used to create an AWS Account for Log Archive purposes
+    Description: Mail Address used to create an AWS Account for Log Archive purposes. (Leave empty to skip)
   Domain:
     Type: String
   Subdomain:
@@ -21,42 +21,49 @@ Parameters:
       - false
     Default: true
     Type: String
+    Description: Enable Budget Alarm for monthly AWS spendings
   IncludeControlTower:
     AllowedValues:
       - true
       - false
     Default: true
     Type: String
+    Description: Enable AWS Control Tower
   IncludeGuardDuty:
     AllowedValues:
       - true
       - false
     Default: true
     Type: String
+    Description: Enable Amazon GuardDuty
   IncludeSecurityHub:
     AllowedValues:
       - true
       - false
     Default: true
     Type: String
+    Description: Enable AWS Security Hub
   IncludeBackup:
     AllowedValues:
       - true
       - false
     Default: true
     Type: String
+    Description: Enable Automated Backups
   IncludeServiceControlPolicies:
     AllowedValues:
       - true
       - false
     Default: true
     Type: String
+    Description: Enable Service Control Policies in AWS Organizations
   IncludeRootMail:
     AllowedValues:
       - true
       - false
     Default: true
     Type: String
+    Description: Enable automated AWS Account root mail handling
   TemplateUrlPrefix:
     Type: String
 
