--- a/.github/workflows/deploy-branch.yml
+++ b/.github/workflows/deploy-branch.yml
@@ -17,6 +17,11 @@ jobs:
     - name: Branch name
       run: echo running on branch ${GITHUB_REF##*/}
 
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
+
     - uses: shallwefootball/s3-upload-action@master
       name: Upload S3
       id: S3
@@ -25,4 +30,4 @@ jobs:
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
         aws_bucket: ${{ secrets.AWS_BUCKET_NAME}}
         source_dir: components/
-        destination_dir: ${{ github.ref }}/
+        destination_dir: sbstjn/${{ steps.extract_branch.outputs.branch }}/
