fix: ensure that wait condition callback lambda is in place before "enable stack sets" canary is executed
so that signalling back to cfn works

--- a/components/backup.yaml
+++ b/components/backup.yaml
@@ -379,6 +379,7 @@ Resources:
 
   EnableCloudFormationStacksetsOrgAccess:
     Type: AWS::Synthetics::Canary
+    DependsOn: CfnStackSetsReady
     Metadata:
       cfn-lint:
         config:
